--- a/BanHang/Web.config
+++ b/BanHang/Web.config
@@ -16,10 +16,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="Email" value="nova07558@gmail.com"/>
+	  <add key="Password" value="xkomxpsndylqyuce"/>
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
-		  <forms loginUrl="~/Admin/Account/Login" timeout="3600"></forms>
+		  <forms loginUrl="~/Home/Index" timeout="3600"></forms>
 	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
