--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -4280,6 +4280,9 @@
     <Content Include="Views\Products\Partial_ItemsByCateId.cshtml" />
     <Content Include="Views\Products\Partial_ProductSales.cshtml" />
     <Content Include="Views\Menu\_BestSeller.cshtml" />
+    <Content Include="Views\Menu\ProductsIndex.cshtml" />
+    <Content Include="Views\Menu\_MenuLeft.cshtml" />
+    <Content Include="Views\Products\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
