--- a/BanHang/Web.config
+++ b/BanHang/Web.config
@@ -21,7 +21,7 @@
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
-		  <forms loginUrl="~/Home/Index" timeout="3600"></forms>
+		  <forms loginUrl="~/Home/Index"></forms>
 	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
