--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\202304231549493_test4.designer.cs">
       <DependentUpon>202304231549493_test4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202304280112495_test11.cs" />
+    <Compile Include="Migrations\202304280112495_test11.designer.cs">
+      <DependentUpon>202304280112495_test11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CommonAbstract.cs" />
@@ -4283,6 +4287,7 @@
     <Content Include="Views\Menu\ProductsIndex.cshtml" />
     <Content Include="Views\Menu\_MenuLeft.cshtml" />
     <Content Include="Views\Products\Index.cshtml" />
+    <Content Include="Views\Account\ThongBaoXacNhanEmail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -4317,6 +4322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202304231549493_test4.resx">
       <DependentUpon>202304231549493_test4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304280112495_test11.resx">
+      <DependentUpon>202304280112495_test11.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
