--- a/BanHang/Web.config
+++ b/BanHang/Web.config
@@ -18,6 +18,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  <add key="Email" value="nova07558@gmail.com"/>
 	  <add key="Password" value="xkomxpsndylqyuce"/>
+	  <!--VNPAY SETTINGS-->
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+	  <add key="vnp_TmnCode" value="HXQBIBDN "/>
+	  <add key="vnp_HashSecret" value="NHIFTNFGLKLJRKPULUXTADKSQQBQHNOC"/>
+	  <add key="vnp_Returnurl" value="http://localhost:44325/vnpay_return.aspx"/>
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
