--- a/BanHang/Web.config
+++ b/BanHang/Web.config
@@ -12,12 +12,18 @@
     <add name="DefaultConnection" connectionString="Data Source=DESKTOP-13UQSHI\MINHNW; Initial Catalog = HANG; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="webpages:Version" value="3.0.0.0" />
+	  <add key="webpages:Enabled" value="false" />
+	  <add key="ClientValidationEnabled" value="true" />
+	  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  <add key="Email" value="nova07558@gmail.com"/>
 	  <add key="Password" value="xkomxpsndylqyuce"/>
+	<!--VNPAY SETTINGS-->
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
+	  <add key="vnp_TmnCode" value="HXQBIBDN"/>
+	  <add key="vnp_HashSecret" value="NHIFTNFGLKLJRKPULUXTADKSQQBQHNOC"/>  
+	  <add key="vnp_Returnurl" value="https://localhost:44325/vnpay_return"/> 
   </appSettings>
   <system.web>
 	  <authentication mode="Forms">
