--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -235,6 +235,10 @@
     <Compile Include="Migrations\202305240836432_status.designer.cs">
       <DependentUpon>202305240836432_status.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202305280844202_fixshipper.cs" />
+    <Compile Include="Migrations\202305280844202_fixshipper.designer.cs">
+      <DependentUpon>202305280844202_fixshipper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CommonAbstract.cs" />
@@ -4364,6 +4368,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202305240836432_status.resx">
       <DependentUpon>202305240836432_status.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202305280844202_fixshipper.resx">
+      <DependentUpon>202305280844202_fixshipper.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
