--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -203,13 +203,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202305310648391_fix.cs" />
-    <Compile Include="Migrations\202305310648391_fix.designer.cs">
-      <DependentUpon>202305310648391_fix.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202305310703138_RemoveImageFromProduct.cs" />
-    <Compile Include="Migrations\202305310703138_RemoveImageFromProduct.designer.cs">
-      <DependentUpon>202305310703138_RemoveImageFromProduct.cs</DependentUpon>
+    <Compile Include="Migrations\202306091512128_tuan.cs" />
+    <Compile Include="Migrations\202306091512128_tuan.designer.cs">
+      <DependentUpon>202306091512128_tuan.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -4317,11 +4313,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202305310648391_fix.resx">
-      <DependentUpon>202305310648391_fix.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202305310703138_RemoveImageFromProduct.resx">
-      <DependentUpon>202305310703138_RemoveImageFromProduct.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202306091512128_tuan.resx">
+      <DependentUpon>202306091512128_tuan.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
