--- a/BanHang/Web.config
+++ b/BanHang/Web.config
@@ -9,22 +9,22 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=LAPTOP-0NVAJD9S; Initial Catalog = DICHO; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-13UQSHI\MINHNW; Initial Catalog = DICHO; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
 	  <add key="webpages:Version" value="3.0.0.0" />
 	  <add key="webpages:Enabled" value="false" />
 	  <add key="ClientValidationEnabled" value="true" />
 	  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	  <add key="Email" value="nova07558@gmail.com"/>
-	  <add key="Password" value="xkomxpsndylqyuce"/>
+	  <add key="Email" value="nova07558@gmail.com" />
+	  <add key="Password" value="xkomxpsndylqyuce" />
 
 	<!--VNPAY SETTINGS-->
-	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"/>
-	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction"/>
-	  <add key="vnp_TmnCode" value="HXQBIBDN"/>
-	  <add key="vnp_HashSecret" value="NHIFTNFGLKLJRKPULUXTADKSQQBQHNOC"/>  
-	  <add key="vnp_Returnurl" value="https://localhost:44325/vnpay_return"/> 
+	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
+	  <add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction" />
+	  <add key="vnp_TmnCode" value="HXQBIBDN" />
+	  <add key="vnp_HashSecret" value="NHIFTNFGLKLJRKPULUXTADKSQQBQHNOC" />  
+	  <add key="vnp_Returnurl" value="https://localhost:44325/vnpay_return" /> 
 
   </appSettings>
   <system.web>
@@ -88,6 +88,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.1" newVersion="7.0.0.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
