--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /BanHang.sln
+/BanHang/Web.config
+/BanHang/Web.Debug.config
+/BanHang/Web.Release.config
