--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -258,9 +258,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202310070554385_test.cs" />
-    <Compile Include="Migrations\202310070554385_test.designer.cs">
-      <DependentUpon>202310070554385_test.cs</DependentUpon>
+    <Compile Include="Migrations\202310220757390_update ava.cs" />
+    <Compile Include="Migrations\202310220757390_update ava.designer.cs">
+      <DependentUpon>202310220757390_update ava.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -4413,8 +4413,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202310070554385_test.resx">
-      <DependentUpon>202310070554385_test.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202310220757390_update ava.resx">
+      <DependentUpon>202310220757390_update ava.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
