--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -4398,7 +4398,9 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Comment\Index.cshtml" />
-    <Content Include="Views\Comment\Edit.cshtml" />
+    <Content Include="Views\Comment\Create.cshtml" />
+    <Content Include="Views\Comment\Reply.cshtml" />
+    <Content Include="Views\Comment\IndexReply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
