--- a/BanHang/Web.config
+++ b/BanHang/Web.config
@@ -17,7 +17,7 @@
 	  <add key="ClientValidationEnabled" value="true" />
 	  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  <add key="Email" value="nova07558@gmail.com" />
-	  <add key="Password" value="xkomxpsndylqyuce" />
+	  <add key="Password" value="hczvjocblebpwwju" />
 
 	<!--VNPAY SETTINGS-->
 	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
