--- a/BanHang/bin/BanHang.dll.config
+++ b/BanHang/bin/BanHang.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-13UQSHI\MINHNW; Initial Catalog = DICHO; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-HJ7PLGE; Initial Catalog = DICHO; Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
 	  <add key="webpages:Version" value="3.0.0.0" />
@@ -17,7 +17,7 @@
 	  <add key="ClientValidationEnabled" value="true" />
 	  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  <add key="Email" value="nova07558@gmail.com" />
-	  <add key="Password" value="xkomxpsndylqyuce" />
+	  <add key="Password" value="hczvjocblebpwwju" />
 
 	<!--VNPAY SETTINGS-->
 	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
