--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -244,7 +244,7 @@
     <Compile Include="Areas\Admin\Controllers\ProductImageController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoleController.cs" />
-    <Compile Include="Areas\Admin\Controllers\ShiperController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ShipController.cs" />
     <Compile Include="Areas\Admin\ViewModels\ProductIndexViewModel.cs" />
     <Compile Include="Common\Common.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -259,9 +259,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202311060734336_newbuild.cs" />
-    <Compile Include="Migrations\202311060734336_newbuild.designer.cs">
-      <DependentUpon>202311060734336_newbuild.cs</DependentUpon>
+    <Compile Include="Migrations\202311121103410_repair.cs" />
+    <Compile Include="Migrations\202311121103410_repair.designer.cs">
+      <DependentUpon>202311121103410_repair.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -278,6 +278,7 @@
     <Compile Include="Models\EF\Product.cs" />
     <Compile Include="Models\EF\ProductCategories.cs" />
     <Compile Include="Models\EF\ProductImage.cs" />
+    <Compile Include="Models\EF\Ship.cs" />
     <Compile Include="Models\EF\SystemSetting.cs" />
     <Compile Include="Models\EF\VnPayLibrary.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -4280,6 +4281,9 @@
     <Content Include="Areas\Admin\Views\Order\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Shiper\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Shiper\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Ship\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Ship\UserShip.cshtml" />
+    <Content Include="Areas\Admin\Views\Order\IDShip.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -4401,11 +4405,17 @@
     <Content Include="Views\Comment\Create.cshtml" />
     <Content Include="Views\Comment\IndexReply.cshtml" />
     <Content Include="Views\Comment\Reply.cshtml" />
+    <Content Include="Views\Profile\Ship.cshtml" />
+    <Content Include="Views\Profile\Order.cshtml" />
+    <Content Include="Views\Profile\Orderd.cshtml" />
+    <Content Include="Views\Profile\NameProduct.cshtml" />
+    <Content Include="Views\Profile\OrderHistory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\ckfinder\userfiles\" />
     <Folder Include="Content\client\ckfinder\userfiles\" />
+    <Folder Include="Views\Ship\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -4421,8 +4431,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202311060734336_newbuild.resx">
-      <DependentUpon>202311060734336_newbuild.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202311121103410_repair.resx">
+      <DependentUpon>202311121103410_repair.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
